test/files/neg/t5903c.check
Test_2.scala:4: error: String is not supported
    case t"$x" => println(x)
         ^
one error found
